tests/NormalTests/paczka1/fuzzy1/53057703.err
Error in line 10: S182 A971 12,3
Error in line 19: tHHjsS S182 70,2
Error in line 28: 9ZDm9h A629 72,2
Error in line 24: tHHjsS A369 58,2
Error in line 11: e7nvI8 A369 270,3
Error in line 34: e7nvI8 A629 47,4
